--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <title>Generador de memes - Proyecto 2</title>
 </head>
-<body>
+<body id="body" class="dark-theme">
 
     <!-- HEADER -->
     <header class="header-wrapper">
@@ -15,8 +15,8 @@
         <div class="header-container">
             <button class="button-header" id="img-button"><i class="fa fa-regular fa-file-image"></i>Imagen</button>
             <button class="button-header" id="text-button"><i class="fa fa-solid fa-font"></i>Texto</button>
-            <button class="button-header" id="dark-button"><i class="fa fa-solid fa-lightbulb"></i>Modo Oscuro</button>
-            <button class="button-header" id="light-button"><i class="fa fa-solid fa-lightbulb"></i>Modo Claro</button>
+            <button class="button-header" id="button-dark-color"><i class="fa fa-solid fa-lightbulb"></i>Modo Oscuro</button>
+            <button class="button-header light" id="button-light-color"><i class="fa fa-solid fa-lightbulb"></i>Modo Claro</button>
         </div>
     </header>
 
@@ -24,7 +24,9 @@
     <main>
         <div class="meme-container" id="meme-container">
             <p class="text-meme meme-container-top-text" id="top-text">TOP TEXT</p>
-            <div class="meme-container-img" id="meme-img"></div>
+            <figure class="meme-container-img" id="meme-img">
+                <img src="" alt="">
+            </figure>
             <p class="text-meme meme-container-bottom-text" id="bottom-text">BOTTOM TEXT</p>
         </div>
         <div class="center-button-download">
@@ -32,11 +34,11 @@
         </div>
     </main>
         <aside class="aside-container" id="panel">
-            <div class="button-panel-close">
+            <!-- <div class="button-panel-close"> -->
                 <button class="close-panel" id="close-button-panel" aria-label="Cerrar panel">
                     <i class="fas fa-times"></i>
                 </button>
-            </div>
+            <!-- </div> -->
 
             <!-- PANEL IMAGEN -->
             <section class="panel-img" id="panel-img">
@@ -81,7 +83,7 @@
                             OPACIDAD
                             <input type="range" id="opacity" min="0" max="1" step="0.1" value="1">
                         </label>
-                   
+                
                         <label for="contrast">
                             CONTRASTE
                             <input type="range" id="contrast" min="100" max="1000" step="1" value="100">
