--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="meme-container" id="meme-container">
             <p class="text-meme meme-container-top-text" id="top-text">TOP TEXT</p>
             <figure class="meme-container-img" id="meme-img">
-                <img src="" alt="">
+                <img src="" alt="image-meme" id="img-meme">
             </figure>
             <p class="text-meme meme-container-bottom-text" id="bottom-text">BOTTOM TEXT</p>
         </div>
@@ -47,7 +47,7 @@
                 <h2 class="panel-title">IMAGEN</h2>
                 <div class="panel-container">
                     <p class="panel-caption">URL</p>
-                    <input type="url" name="url-img" id="url-img" class="panel-input">
+                    <input type="text" name="url-img" id="url-img" class="panel-input">
                 </div>
 
                 <!-- ASIDE FONDO -->
@@ -116,7 +116,7 @@
 
                         <label for="invert">
                             NEGATIVO
-                            <input type="range" id="invert" min="0" max="1" step="0.1" value="1">
+                            <input type="range" id="invert" min="0" max="1" step="0.1" value="0">
                         </label>
                 </div>
                 <button class="button-filter" id="button-filter-default">Reestablecer filtros</button>
