Panel texto: texto superior, inferior, tamaño fuente, tipo de fuente, texto justificado

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                     <!-- ASIDE TAMAÑO -->
                     <div class="panel-text-flex">
-                        <input type="number" name="Tamaño de fuente" id="text-size" min="12" value="40" class="panel-input text-size">
+                        <input type="number" name="Tamaño de fuente" id="text-size" min="20" max="90" value="40" class="panel-input text-size">
                         <!-- ASIDE ALINEACION -->
                         <div class="buttons-alignment">
                             <button class="button-align" id="text-left-align"><i class=" fa fa-solid fa-align-left"></i></button>
