Fin del panel de texto. Contorno, espaciado e interlineado

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <!-- CARGAR IMG -->
     <main>
         <div class="meme-container" id="meme-container">
-            <p class="text-meme meme-container-top-text" id="top-text">TOP TEXT</p>
+            <p class="text-meme" id="top-text">TOP TEXT</p>
             <figure class="meme-container-img" id="meme-img">
                 <img src="" alt="image-meme" id="img-meme">
             </figure>
-            <p class="text-meme meme-container-bottom-text" id="bottom-text">BOTTOM TEXT</p>
+            <p class="text-meme" id="bottom-text">BOTTOM TEXT</p>
         </div>
         <div class="center-button-download">
             <button class="button-download" id="button-download"><i class="fa fa-solid fa-download"></i>Descagar Meme</button>
